# ppois_lab1

./: .gitignore  README.md
lab_1/: .coverage  pyproject.toml
lab_1/multitude/: __init__.py  cantor_set.py  parser.py
lab_1/tests/: conftest.py  test_cantor_set.py  test_turing_machine.py
lab_1/turing_machine/: __init__.py  enums.py  execution.py  machine.py  main.py  settings.py  tape.py  transition.py
lab_3/: .coverage  README.md  pyproject.toml
lab_3/src/application/: validators.py
lab_3/src/application/interfaces/: services.py
lab_3/src/application/repositories/: __init__.py  account_repository.py  catalog_repository.py  exhibition_repository.py  reservation_repository.py
lab_3/src/domain/entities/: artist.py  artwork.py  base_exhibition.py  credential.py  customer.py  insurance.py  logistics.py  payment_card.py  visitor.py  (+3 more)
lab_3/src/errors/: __init__.py  account_does_not_exist.py  artwork_already_sold_error.py  artwork_not_found_error.py  curator_not_authorized_error.py  customer_not_eligible_error.py  exhibition_closed_error.py  exhibition_does_not_exist.py  gallery_base_error.py  insufficient_funds_error.py  insurance_validation_error.py  invalid_input_error.py  invalid_password_error.py  logistics_assignment_error.py  payment_authorization_error.py  provenance_verification_error.py  reservation_does_not_exist.py  reservation_expired_error.py
lab_3/tests/: conftest.py  test_additional_coverage.py  test_app_client.py  test_domain_entities.py  test_error_paths.py  test_presentation_routes.py  test_use_cases.py  test_validation_and_repositories.py
(+133 files in other folders)
