[tool.poetry]
name = "lab-2"
version = "0.1.0"
description = ""
authors = ["depich <dmitriysvitok@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
pytest = "^9.0.1"
pytest-cov = "^7.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
